Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13, 5.14
-
None
-
-
55cc93e9d68a8851163f16dfa8a25a817c2e129e (qt/qtbase/5.12)
Description
Some ( ? ) texture-related items began to appear with inverted Red and Blue channel on android starting with 5.13.
Among others (see related bug), QQuickPaintedItem exhibit this behavior.
To reproduce:
open the qml/tutorials/extending-qml/chapter3-bindings/
When run on desktop, the pie chart appear red, and turns into blue upon tap/click
When run on android, the pie chart appear blue and turns into red upon tap/click
The same issue (related to qquickpainteditem) is visible in the mapviewer example's copyright notice.
Note: QQuickPaintedItem is seemingly not the only one affected, as map tiles also show the same behavior.
Perhaps a RGB turned into a BGR somewhere (or vice-versa)?
Attachments
Issue Links
- relates to
-
QTBUG-76578 Colors on Android x86 simulator are wrong (e.g. .svg icons)
-
- Reported
-
-
QTBUG-74968 ANGLE: Painting with QPainter on QOpenGLWidget flips R and B channels
-
- Closed
-
- resulted in
-
QTBUG-73121 Tile colors in esri maps are weird on android
-
- Closed
-
For Gerrit Dashboard: QTBUG-74150 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
254783,2 | Prefer BGRA uploading to swizzling | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |