Prefer BGRA uploading to swizzling

The older BGRA extension is more likely to have stable driver support.

Fixes: QTBUG-74150
Change-Id: If321b3024fbdeb9e199880744b9ee915b3b2bf6c
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>